--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+.title {
+  color: black;
+}
 .App {
   text-align: center;
 }
@@ -8,12 +11,13 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 85vh;
+  padding-top: 25px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* justify-content: center; */
+  font-size: calc(5px + 2vmin);
   color: white;
 }
 
