--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,20 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+p {
+  color: black;
+  font-size: 1rem;
+}
+
+.title {
+  text-decoration: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.footer {
+  position: relative;
 }
